# privacy-guardian-mvp-test

PrivacyGuardian_final_zip/PrivacyGuardian/: README.md  pyproject.toml  requirements.txt
PrivacyGuardian_final_zip/PrivacyGuardian/assets/: sample_customers.csv
PrivacyGuardian_final_zip/PrivacyGuardian/frontend/: app.py
PrivacyGuardian_final_zip/PrivacyGuardian/frontend/static/css/: style.css
PrivacyGuardian_final_zip/PrivacyGuardian/frontend/templates/: base.html  breach.html  checklist.html  cross_border.html  dsar.html  enhanced_risk.html  home.html  inventory.html  policy.html  quebec.html  risk.html  rrosh.html
PrivacyGuardian_final_zip/PrivacyGuardian/modules/: __init__.py  breach_record.py  compliance_checklist.py  cross_border_assessment.py  csv_validator.py  dsar_factory.py  export_reports.py  ml_risk_classifier.py  policy_generator.py  processing_inventory.py  quebec_law_pack.py  risk_assessment.py  risk_scoring_enhancements.py  rrosh_decision.py  session_manager.py  session_ui_helpers.py
